--- a/IBN.ipynb
+++ b/IBN.ipynb
@@ -2,41 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-64787.877799893475\n"
+      "-112.37088862289009\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "filename=\"small-10-datasets/nltcs.ts.data\"\n",
-    "dataset1=np.loadtxt(filename,delimiter=',', dtype=bool)\n",
-    "filename=\"small-10-datasets/nltcs.valid.data\"\n",
-    "dataset2=np.loadtxt(filename,delimiter=',', dtype=bool)\n",
-    "dataset = np.vstack((dataset1, dataset2))\n",
+    "dataset = np.vstack((np.loadtxt(\"small-10-datasets/r52.ts.data\",delimiter=',', dtype=bool), np.loadtxt(\"small-10-datasets/r52.valid.data\",delimiter=',', dtype=bool)))\n",
     "pos_prob = (np.sum(dataset, axis=0)+1)/(dataset.shape[0]+2)\n",
     "neg_prob = 1-pos_prob\n",
-    "filename=\"small-10-datasets/nltcs.test.data\"\n",
-    "testset=np.loadtxt(filename,delimiter=',', dtype=bool)\n",
-    "pos_test = np.sum(dataset, axis=0)\n",
+    "testset=np.loadtxt(\"small-10-datasets/r52.test.data\",delimiter=',', dtype=bool)\n",
+    "pos_test = np.sum(testset, axis=0)\n",
     "neg_test = testset.shape[0]-pos_test\n",
     "LL = np.dot(pos_test, np.log(pos_prob))+np.dot(neg_test, np.log(neg_prob))\n",
-    "LL = 0\n",
-    "for i in range(testset.shape[0]):\n",
-    "    for j in range(testset.shape[1]):\n",
-    "        if testset[i, j] == 0:\n",
-    "            LL += np.log(neg_prob[j])\n",
-    "        else:\n",
-    "            LL += np.log(pos_prob[j])\n",
-    "            \n",
-    "LL = np.sum(np.log(pos_prob)*pos_test)+np.sum(np.log(neg_prob)*neg_test)\n",
-    "print(LL)"
+    "print(LL/testset.shape[0])"
    ]
   },
   {
